--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "animetrails",
   "version": "1.0.0",
   "description": "A list of the anime I have watched.",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/CarltonMpofu/anime-trails#readme",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "mongoose": "^7.3.0"
